# olist_project

./: .gitignore  .user.yml  README.md  pyproject.toml
.github/workflows/: pipeline.yml
2-local_setup/: .gitignore  docker-compose.yml  pyproject.toml  pyvenv.cfg
2-local_setup/etl/: load_raw.py
3-dbt/dbt_olist/: README.md  dbt_project.yml
3-dbt/dbt_olist/models/1_staging/: src_olist.yml  staging_customers.sql  staging_products.sql  staging_sellers.sql
3-dbt/dbt_olist/models/2_intermediate/: int_customers.sql  int_customers_order_history.sql  intermediate.yml
3-dbt/dbt_olist/models/3_marts/: dim_customers.sql  dim_sellers.sql  fct_monthly_revenue.sql  marts.yml
4-airflow/: Dockerfile  README.md  airflow_settings.yaml.example  docker-compose.override.yml  requirements.txt
4-airflow/.astro/: config.yaml
4-airflow/dags/: .airflowignore  dag.py
4-airflow/dbt_olist/: dbt_project.yml
4-airflow/dbt_olist/models/1_staging/: src_olist.yml  staging_customers.sql  staging_order_items.sql  staging_orders.sql  staging_payments.sql
4-airflow/include/etl/: load_raw.py
4-airflow/tests/dags/: test_dag_example.py
data/: Untitled-1.sql  etl_olist.py
dbt_olist/: .user.yml  CICD_GITHUB_ACTIONS.md  dbt_project.yml  main.py  profiles.yml  pyproject.toml
dbt_olist/models/marts/: dim_customers.sql  dim_products.sql  dim_sellers.sql  fct_monthly_revenue.sql  marts.yml
dbt_olist/models/staging/: src_olist.yml  staging__customers.sql  staging_order_items.sql  staging_orders.sql  staging_payments.sql  staging_products.sql  staging_sellers.sql
docs/: SETUP.md
(+6 files in other folders)
